# Cirkelline-Kv1ntos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sekretaer  00_HIBERNATION_STATUS.md  ADMIRAL_STOREBROR.md  CHANGELOG_2025-12-16.md  CLAUDE.md  Dockerfile  LAERERUM-MEMORY-EVOLUTION.md  RASMUS_SETUP_GUIDE.md  README.md  ROADMAP_2025-12-16.md  SECURITY.md  SECURITY_CHANGES.md  SECURITY_CLEANUP_COMPLETE.md  STATUS_2025-12-16.md  VERSION.md  alembic.ini  app_overhaul.md  create_missing_tables.sql  crowdin.yml  docker-compose.ckc.yml  docker-compose.elk.yml  docker-compose.localstack.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  my_os.py  pyproject.toml  pytest.ini  requirements.txt  shared-requirements.txt  system-koordinator.py  test_browseruse.py  test_cli.py  test_memory_room.py
.github/: dependabot.yml
AUDIT-2025-12-14/: BASELINE-2025-12-14.md  EXECUTION-COMPLETE.md  EXECUTION-ROADMAP.md  FINAL-SAMLET-RAPPORT.md  FINAL-STATUS-2025-12-14.md  KLAR-TIL-TEST.md  MASTER-PLAN.md  P1-COMPLETE-2025-12-14.md  P2-SCALABILITY-COMPLETE.md  ROADMAP-FINAL.md  TEST-RESULTS-2025-12-14.md
AUDIT-2025-12-16/: AGENT-TODOS.md  BAKTERIE-PERSPEKTIV.md  BASELINE-TEST-RAPPORT.md  CHANGELOG.md  CKC-API-ENDPOINTS.md  DAGLIG-RUTINE.md  FUGLE-PERSPEKTIV-PLAN.md  KOMMANDOR-FULDT-OVERBLIK.md  KOMMANDOR-RAPPORT.md  SYSTEM-OVERBLIK.md  TEST-BASELINE-2025-12-17.md
CKC-COMPONENTS/: INDEX.md  component_loader.py  export_docs.py  freeze_component.py  manifest-schema.json
INTRO/: .chat  .metadata.yaml  00_INDEX.md  README.md
INTRO.backup.2026-01-01/: 00_INDEX.md
alembic/: env.py
aws_deployment/: .dockerignore  BLUE-GREEN-DEPLOYMENT-GUIDE.md  cloudwatch-alarms.json  cloudwatch-dashboard.json  create_secrets.sh  cron_backup.conf  db_backup.sh  deploy.sh  deploy_blue_green.sh  get_secret_arns.sh  old_db_password.txt  rotate_secrets.sh  setup_monitoring.sh  task-definition.json
backups/: check_status_options.py  debug_notion_search.py  inspect_task_properties.py  test_notion_crud.py  test_notion_oauth.py  verify_notion_oauth.py
cirkelline/: README.md  __init__.py  config.py  database.py  knowledge_base.py  models.py
cirkelline-ui/: .env.production  CALENDAR_REDESIGN_PROGRESS.md  CLAUDE.md  DEBUG_SESSION_SIDEBAR.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
cirkelline/native/: Cargo.toml  __init__.py  pyproject.toml
cirkelline/native/src/: lib.rs
cla/: CHANGELOG.md  CKC-API-SPEC.md  README.md  SECURITY.md  TEST-PLAN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
cla/src-tauri/: Cargo.toml  tauri.conf.json
cla/src-tauri/src/: main.rs
cla/src-tauri/src/accessibility/: command_parser.rs  hotword_detector.rs  mod.rs  speech_synthesis.rs  voice_controller.rs
cla/src-tauri/src/commander/: decision_engine.rs  mod.rs  sync.rs  task_scheduler.rs  unit.rs
cla/src-tauri/src/commands/: accessibility.rs  commander.rs  inference.rs  mod.rs  resource.rs  settings.rs  sync.rs  telemetry.rs
cla/src-tauri/src/error/: mod.rs  retry.rs
cla/src-tauri/src/inference/: embedding.rs  mod.rs  ocr.rs  whisper.rs
cla/src-tauri/src/models/: mod.rs
cla/src-tauri/src/research/: mod.rs  traits.rs
cla/src-tauri/src/research/adapters/: arxiv.rs  common.rs  github.rs  mod.rs
cla/src-tauri/src/research/processors/: mod.rs  relevance_scorer.rs  signal_processor.rs
cla/src-tauri/src/security/: auth.rs  encryption.rs  mod.rs  validation.rs
cla/src-tauri/src/telemetry/: health.rs  metrics.rs  mod.rs  reporter.rs
cla/src-tauri/src/utils/: idle_detector.rs  mod.rs  resource_limiter.rs
cla/src-tauri/tests/: inference_tests.rs  integration_tests.rs  security_tests.rs
cli/: __init__.py  auth.py  client.py  config.py  git_context.py  main.py  setup.py
database_migrations/: 001_add_metrics_column.sql
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-TROUBLESHOOTING.md  03-AWS-DEPLOYMENT.md  04-DATABASE-REFERENCE.md  05-BACKEND-REFERENCE.md  06-FRONTEND-REFERENCE.md  07-DEVELOPMENT-GUIDE.md  08-FEATURES.md  09-ENVIRONMENT-VARIABLES.md  10-CHANGELOG.md  11-API-ENDPOINTS.md  12-GOOGLE-SERVICES.md  13-CHAT-MESSAGE-FLOW.md  14-BEHIND-THE-SCENES-DESIGN.md  16-INTEGRATION-DESIGN-PATTERN.md  16-INTELLIGENT-SESSION-NAMING.md  16-VISUAL-ACTIVITY-INDICATOR.md  17-RETRY-LOGIC-AND-ERROR-HANDLING.md  18-NOTION-INTEGRATION.md  24-DEEP-RESEARCH-MODE-IMPLEMENTATION.md  26-CALLABLE-INSTRUCTIONS-DEEP-RESEARCH-FIX.md  28-MODULARIZATION-GUIDE.md  29-CODE-LOCATION-MAP.md  31-DEEP-RESEARCH.md  32-RESPONSE-VALIDATION.md  32-TIMEOUT-PROTECTION.md  33-STREAMING-ERROR-HANDLING.md  34-SESSION-STATE-WORKAROUND.md  51-FEEDBACK-SYSTEM.md  52-USER-MANAGEMENT-SYSTEM.md  53-REAL-TIME-ACTIVITY-LOGGING.md  54-KNOWLEDGE-DOCUMENT-SYSTEM.md  55-METRICS.md  56-RESEARCH-TEAM.md  57-MEMORY.md  58-MEMORY-WORKFLOW.md  59-DAILY-JOURNAL-WORKFLOW.md  59-FOLDER-SWITCHER.md  60-APP-CONTAINER.md  (+88 more)
integration/: config.py
loadtest/: config.js
migrations/: 001_create_users_table.sql  002_create_tier_system.sql  003_create_notion_tokens.sql  004_agent_learning_system.sql  audit_compliance_setup.sql  i18n_setup.sql  v1.3.0_workflow_tables.sql
scripts/: README.md  check_agno_table_name.py  check_knowledge_db.py  check_knowledge_methods.py  check_uploaded_files.py  ckc-test.sh  create_contents_table_manual.py  create_missing_vectors.py  daily-check.sh  ecosystem-backup.sh  evening_opt_2121.py  fase2_validation.py  fix_journal_day_numbers.py  fix_knowledge_properly.py  hcv_status.json  health-check.sh  i18n-migration-backup.sh  initialize_contents_db.py  initialize_knowledge_base.py  investigate_rasmus.py  load_vectors.py  migrate.sh  migrate_memories.py  migrate_memories.sql  morning_sync_0900.py  prepare_for_memory_migration.py  reupload_with_contents_db.py  roadmap_validator.py  run-i18n-migration.sh  run_tests.sh  setup_all_routines_cron.sh  setup_sorting_cron.sh  setup_test_documents.py  sorting_0333.py  stability-check.sh  test-mastermind.sh  validate-translations.js
services/: __init__.py  tier_service.py
(+734 files in other folders)
