[package]
name = "cirkelline_native"
version = "0.1.0"
edition = "2021"
description = "High-performance native extensions for Cirkelline"
authors = ["Cirkelline Team"]

[lib]
name = "cirkelline_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
moka = { version = "0.12", features = ["sync"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
